# mindwm-kn-func-nix

./: .gitignore  flake.nix  func.yaml  kservice.yaml  package.nix  pyproject.toml  tmpl_kservice.yaml  trigger.yaml
src/helpers/: build_and_deploy.py
src/knfunc/: func.py  otlp.py  server.py  test_func.py
src/mindwm/: knfunc.py  otlp.py
templates/: trigger.yaml
